--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -119,4 +119,11 @@
     <string name="invalid_choice">Pick an answer to continue</string>
     <string name="next_match">Next Match</string>
 
+    <!-- Deseert Pusher-->
+    <string name="dollar_sign">$</string>
+    <string name="zero">0</string>
+    <string name="dessert_sold">Desserts Sold</string>
+    <string name="share_text">I\'ve clicked %1$d Desserts for a total of %2$d$ #AndroidDessertClicker</string>
+    <string name="dessert_pusher">Dessert Pusher</string>
+
 </resources>
