Home Activity - DiceFragment - TriviaGameFragment - Desert Pusher Fragment - Guess It Fragment - SleepTracker Fragment with Recycler View - mars real estate - auth/main with coroutines - devbyte Viewer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -196,4 +196,8 @@
     <string name="display_price">$%,.0f</string>
     <string name="mars_real_estate">Mars Real Estate</string>
 
+    <!-- DevByte Viewer -->
+
+    <string name="devByte_viewer_name">DevByte Viewer</string>
+
 </resources>
