--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -302,7 +302,7 @@
     <string name="geofence_over">You have found the treasure! Congratulations!</string>
 
     <!-- Geofence Hints -->
-    <string name="not_started_hint"></string>
+    <string name="not_started_hint">Not Started</string>
     <string name="golden_gate_bridge_hint">Go to a bridge with a name that does not match the color that it is!</string>
     <string name="ferry_building_hint">Go to a market with an amazing assortment of delicious foods. It is a San Francisco classic!</string>
     <string name="pier_39_hint">Go to a pier popular for tourist attractions, carnival games, fresh fish, and delicious sourdough bread!</string>
@@ -365,7 +365,12 @@
         Ac orci phasellus egestas tellus rutrum tellus. Ultrices neque ornare aenean euismod elementum nisi quis. Vel pharetra vel turpis nunc eget. Quis lectus nulla at volutpat diam ut venenatis tellus in. Egestas congue quisque egestas diam in arcu. Tincidunt praesent semper feugiat nibh sed pulvinar. Tristique senectus et netus et malesuada fames. Tristique nulla aliquet enim tortor. Aliquet nibh praesent tristique magna sit amet purus. Diam maecenas ultricies mi eget mauris pharetra et ultrices neque. Morbi tristique senectus et netus et malesuada. Venenatis tellus in metus vulputate eu scelerisque felis. Risus pretium quam vulputate dignissim suspendisse in. Ut venenatis tellus in metus vulputate. Turpis in eu mi bibendum. Pellentesque elit eget gravida cum sociis natoque. Tristique risus nec feugiat in fermentum posuere urna. Senectus et netus et malesuada fames ac turpis.</string>
     <string name="title_activity_step7_completed">Complex motion with KeyFrames</string>
     <string name="title_activity_step8">Running motion with code</string>
+    <!--    Coordinate motion-->
+
+    <string name="coordinated_motion_app_name">Coordinated Motion</string>
+    <string name="transition_avatar">avatar</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
